# axon

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
axon-cli/: Cargo.toml
axon-cli/src/: agents.rs  chat.rs  config.rs  main.rs  onboarding.rs  providers.rs  tui.rs
axon-core/: Cargo.toml
axon-core/src/: crdt.rs  discovery.rs  gossip.rs  identity.rs  lib.rs  mdns.rs  negotiate.rs  protocol.rs  router.rs  runtime.rs  taskqueue.rs  transport.rs  trust.rs
axon-core/src/mcp/: bridge.rs  client.rs  jsonrpc.rs  mod.rs  registry.rs  schema.rs  server.rs
axon-core/src/orchestrate/: blackboard.rs  definition.rs  hooks.rs  lifecycle.rs  mod.rs  trace.rs  workflow.rs
axon-core/tests/: integration.rs
axon-desktop/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
axon-desktop/src/: App.tsx  index.css
axon-desktop/src-tauri/: Cargo.toml  tauri.conf.json
axon-desktop/src-tauri/src/: lib.rs  main.rs
axon-desktop/src/components/: command-palette.tsx  onboarding.tsx
axon-desktop/src/hooks/: use-api.ts  (+1 more)
axon-sdk/: Cargo.toml
axon-sdk/src/: lib.rs
axon-test-mcp-server/: Cargo.toml
axon-test-mcp-server/src/: main.rs
axon-web/: Cargo.toml
axon-web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
axon-web/frontend/src/: App.tsx  index.css  main.tsx
axon-web/frontend/src/components/layout/: app-layout.tsx  header.tsx  layout.tsx  sidebar.tsx
axon-web/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  skeleton.tsx
axon-web/frontend/src/hooks/: use-api.ts
axon-web/frontend/src/lib/: api.ts  types.ts  ws.ts
axon-web/frontend/src/pages/: agents.tsx  blackboard.tsx  chat.tsx  graph.tsx  logs.tsx  mesh.tsx  settings.tsx  tasks.tsx  tools.tsx  trust.tsx  workflows.tsx
axon-web/src/: embed.rs  lib.rs  state.rs  ws.rs
axon-web/src/api/: agents.rs  auth.rs  blackboard.rs  chat.rs  config.rs  mesh.rs  mod.rs  models.rs  status.rs  tasks.rs  tools.rs  trust.rs  workflows.rs
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  introduction.md  quickstart.md
docs/theme/: index.hbs
(+37 files in other folders)
