[package]
name = "axon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axon-sdk = { path = "../axon-sdk" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
anyhow = "1"
quinn = "0.11"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
