[package]
name = "axon-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
bincode = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
mdns-sd = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
dirs = "6"
sled = "0.34"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
