[package]
name = "axon-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axon-core = { path = "../axon-core" }
axum = { version = "0.8", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
mime_guess = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
toml = "0.8"
dirs = "6"
async-trait = "0.1"
futures-util = "0.3"
axum-extra = { version = "0.10", features = ["typed-header"] }
